# diploma-tracer

./: README.md  meson.build  meson.options
Assets/: Precompiler.py  precompile.bat
Assets/Models/: Cow.fbx  blneder_suzanne.fbx  bunny.fbx  cube.fbx  sphere.fbx  sponza.mtl  suzanne.fbx  teapot.fbx
Assets/PrecompiledShaders/: Flat.frag.spv  OnScreen.vert.spv  RaytraceBHV.comp.spv  RaytraceBHVTree.comp.spv  RaytraceKdTree.comp.spv  RaytraceSimpleLoop.comp.spv  Raytracing.comp.spv
Assets/Shaders/: Flat.frag  Flat.vert  OnScreen.vert  Raytracing.comp
Assets/Shaders/RayTriversal/: BHVTree.glsl  Common.glsl  KdTree.glsl  SimpleLoop.glsl
Assets/Shaders/RenderPass/: OnScreen.frag  RaytraceBHV.comp  RaytraceKdTree.comp  RaytraceSimpleLoop.comp  RaytracingPass.glsl  SceneData.glsl  VertexInput.glsl
Assets/Shaders/Utils/: color.glsl  constants.glsl  random.glsl
Assets/Shaders/include/: color.glsl  constants.glsl
Libraries/: meson.build
Libraries/Tracy/: meson.build
Source/: meson.build
Source/TracerCore/: BHVTree.cpp  BHVTree.hpp  ComputePipelineObject.cpp  ComputePipelineObject.hpp  GraphicsPipelineObject.cpp  GraphicsPipelineObject.hpp  KdTree.cpp  KdTree.hpp  Model.cpp  Model.hpp  PipelineManager.cpp  PipelineManager.hpp  PipelineObject.cpp  PipelineObject.hpp  PiplineObject.cpp  PiplineObject.hpp  Raytracer.cpp  Raytracer.hpp  ShaderReosuceManager.cpp  ShaderReosuceManager.hpp  SwapChain.cpp  SwapChain.hpp  Texture2D.cpp  Texture2D.hpp  Tracer.cpp  Tracer.hpp  TracerCamera.cpp  TracerCamera.hpp  TracerScene.cpp  TracerScene.hpp  VulkanDevice.cpp  VulkanDevice.hpp  Window.cpp  Window.hpp  main.cpp  meson.build
Source/TracerCore/AccelerationStructures/: AccelerationStructure.hpp  BHVTree.cpp  BHVTree.hpp  KdTree.cpp  KdTree.hpp
Source/TracerCore/Resources/: Texture2D.cpp  Texture2D.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanResource.hpp
Source/TracerCore/UI/: CamerUIControl.cpp  CamerUIControl.hpp  FrameControllsUI.cpp  FrameControllsUI.hpp  ImguiLayer.cpp  ImguiLayer.hpp  StatisicUILayer.cpp  StatisicUILayer.hpp  UILayer.hpp  WindowsFileDialog.cpp  WindowsFileDialog.hpp
Source/TracerCore/Utils/: DebugLayerMessenger.cpp  DebugLayerMessenger.hpp
Source/TracerUtils/: TracerIO.cpp  TracerIO.hpp  meson.build
Source/TracerUtils/Math/: AABB.hpp  RandomHelper.hpp
Source/TracerUtils/Models/: TracerMesh.hpp  TracerVertex.hpp
