tracer_core_src = files([
    'main.cpp', 
    'VulkanDevice.cpp', 
    'Window.cpp', 
    'SwapChain.cpp', 
    'Tracer.cpp', 
    'PipelineObject.cpp', 
    'Model.cpp', 
    'Raytracer.cpp', 
    'ShaderReosuceManager.cpp', 
    'PipelineManager.cpp',
    'Resources/Texture2D.cpp', 
    'Resources/VulkanBuffer.cpp', 
    'Utils/DebugLayerMessenger.cpp',
    'UI/ImguiLayer.cpp',
    'UI/UILayer.cpp',
])


