tracer_core_src = files([
    'main.cpp', 
    'VulkanDevice.cpp', 
    'Window.cpp', 
    'SwapChain.cpp', 
    'Tracer.cpp', 
    'PipelineObject.cpp', 
    'TracerScene.cpp',
    'Model.cpp', 
    'Raytracer.cpp', 
    'ShaderReosuceManager.cpp', 
    'PipelineManager.cpp',
    'Resources/Texture2D.cpp', 
    'Resources/VulkanBuffer.cpp', 
    'Utils/DebugLayerMessenger.cpp',
    'UI/ImguiLayer.cpp',
    'UI/UILayer.cpp',
    'UI/CamerUIControl.cpp',
    'UI/StatisicUILayer.cpp',
    'TracerCamera.cpp',
    'BHVTree.cpp',
])


