tracer_core_src = files([
    'main.cpp', 
    'VulkanDevice.cpp', 
    'Window.cpp', 
    'SwapChain.cpp', 
    'PipelineObject.cpp', 
    'Tracer.cpp', 
    'TracerScene.cpp',
    'Model.cpp', 
    'Raytracer.cpp', 
    'ShaderReosuceManager.cpp', 
    'PipelineManager.cpp',
    'Resources/Texture2D.cpp', 
    'Resources/VulkanBuffer.cpp', 
    'Utils/DebugLayerMessenger.cpp',
    'UI/ImguiLayer.cpp',
    'UI/UILayer.cpp',
    'UI/CamerUIControl.cpp',
    'UI/StatisicUILayer.cpp',
    'UI/WindowsFileDialog.cpp',
    'UI/FrameControllsUI.cpp',
    'TracerCamera.cpp',
    'AccelerationStructures/BHVTree.cpp',
    'AccelerationStructures/KdTree.cpp'
])

trace_core_includes = include_directories('.')

